--- a/style.css
+++ b/style.css
@@ -138,8 +138,25 @@
   border: 2px solid #555;
   color: #555;
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
 }
 
 .projectButton::after {
   content: "View Demo";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: -100%;
+  transition: 1s all;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #555;
+  color: #222;
+}
+
+.projectButton:hover.projectButton::after {
+  transform: translateX(100%);
 }
